# datatoolkit

./: Cargo.toml  README.md
src/: datapoint.rs  datavector.rs  flexdata.rs  flexdatapoint.rs  flexdatavector.rs  flexseries.rs  flextable.rs  globals.rs  helper.rs  lib.rs  series.rs  timeseries.rs
test/: datapoint_test.rs  timeseries_test.rs
tests/: E3.csv  datapoint_test.rs  datavector_test.rs  flexdata_test.rs  flexseries_test.rs  flextable_test.rs  series_test.rs  timeseries_test.rs
